[package]
name = "helpscout"
version = "0.1.0"
authors = ["Tristan Mortimer <tristan.e.mortimer@gmail.com>"]
description = "Bindings for the HelpScout API."


[dependencies]
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
dotenv = "0.10"