[package]
name = "helpscout"
version = "0.0.5"
authors = ["Lance Carlson <lancecarlson@gmail.com>", "Tristan Mortimer <tristan.e.mortimer@gmail.com>"]
description = "Bindings for the HelpScout API."
license = "MIT"
documentation = "https://docs.rs/helpscout/"
repository = "https://github.com/lancecarlson/helpscout-rs"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_url_params = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ring = "0.11"
dotenv = "0.10"
time = "0.1"

[dev-dependencies]
env_logger = "0.5"
uuid = { version = "0.4", features = ["v4"] }
